Fix menu on mobile.

--- a/assets/_partials/css/main.scss
+++ b/assets/_partials/css/main.scss
@@ -3771,6 +3771,10 @@ pre code, .mjx-chtml {
   filter: blur(10px);
 }
 
+.collapse.show {
+  display: block;
+}
+
 .github-corner:hover .octo-arm{
   animation:octocat-wave 560ms ease-in-out
 }
